Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-12899

Assert (FALSE) in ACPI buspdo.c on second stage on Dell Latitude D810

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.6
    • Drivers: Other
    • None

    Description

      Installed from trunk on on Dell Latitude D810 and on second stage boot assert in ACPI buspdo.c:823.

      Attachments

        1. acpi.zip
          51 kB
        2. acpica-fix-resrc.patch
          1 kB
        3. acpica-fix-resrc-verbose.patch
          2 kB
        4. acpi-table-9100.txt
          129 kB
        5. acpi-table-d810.txt
          64 kB
        6. bootcd-74053-dbg.iso-ReactOS-20170415-175049-short.log
          6 kB
        7. buspdo.c.patch
          0.6 kB
        8. CORE-12899_2.patch
          1 kB
        9. CORE-12899.patch
          0.7 kB
        10. hwhacks.c.patch
          0.8 kB
        11. ReactOS-0.4.5-RC2.iso-20170505-112935.log.txt
          29 kB
        12. ros_acpi_fix_assert_log.txt
          34 kB
        13. ros_toshiba_9100_buspdo_assert.txt
          38 kB
        14. ros-acpi-verbose.txt
          35 kB
        15. ros-assert-swenum.txt
          51 kB
        16. ros-log-buspdo.txt
          226 kB
        17. ros-log-touchpad.txt
          147 kB

        Issue Links

          Activity

            People

              ThFabba ThFabba
              menuhin menuhin
              Votes:
              4 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: