[i8042prt]: Add yet another Dell Latitude hack, (for D810 this time). These Dell laptops undeniably have a peculiar init way that our driver doesn't support naturally. CORE-12899

svn path=/trunk/; revision=74135